reworked div layout of LoginForm&RegForm and app.css attributes to resolve overlap on login page

--- a/src/App.css
+++ b/src/App.css
@@ -2,36 +2,27 @@ form input{
   margin: 0.5rem;
 }
 
- /*Registration and Login Forms*/
- .RegForm {
-     /* margin: 2rem auto; */
-  /* display: flex; */
-  position: fixed;
-  align-items: center;
-  /* flex-direction: column; */
-  top: 48vh;
-  left: 42vw;
-  width: 300px;
-  padding: 4rem;
-  box-shadow: 4px 10px 18px 4px rgba(0, 0, 0, 0.33);
-  background-color: grey;
-  z-index: 1;
- }
- 
- /*Registration and Login Forms*/
+ /*Login Forms*/
  .LoginForm {
-  /* margin: 2rem auto; */
+  margin: auto; 
   display: flex;
   position: fixed;
   align-items: center;
   flex-direction: column;
-  top: 1vh;
+  top: 5vh;
   left: 42vw;
   width: 300px;
-  padding: 4rem;
-  box-shadow: 4px 10px 18px 4px rgba(0, 0, 0, 0.33);
-  background-color: grey;
   z-index: 1;
+}
+.LoginForm .fill {
+  width: 100%;
+  flex: 1;
+  margin-top: 100px;    
+}
+.LoginForm .fixed {
+  padding: 2rem;
+  background-color: grey;
+  box-shadow: 4px 10px 18px 4px rgba(0, 0, 0, 0.33);
 }
 
 /*Grid for log area layouts on user page*/
